feat: Add functionality to add user expenses